--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,42 @@
     <title>Libmanage</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+      <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="/">LibManage</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                      <li class="nav-item active">
+                          <%= link_to "Home", "/", class: "nav-link" %>
+                      </li>
+                      <li class="nav-item">
+                          <%= link_to "About", about_path, class: "nav-link" %>
+                      </li>
+                      <li class="nav-item">
+                          <%= link_to "books", "#", class: "nav-link" %>
+                      </li>
+                  </ul>
+              </div>
+          </nav>
+          <div class="row">
+              <div class="col">
+                  <%= yield %>
+              </div>
+          </div>
+      </div>
+  <%= javascript_include_tag 'application' %>
   </body>
 </html>
