Create User model with devise gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                           <%= link_to "About", about_path, class: "nav-link" %>
                       </li>
                       <li class="nav-item">
-                          <%= link_to "books", "#", class: "nav-link" %>
+                          <%= link_to "Books", "#", class: "nav-link" %>
                       </li>
                   </ul>
               </div>
