--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Libmanage</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="">
+      <meta name="author" content="">
+
+      <title>LibManage</title>
+
+      <!-- Bootstrap core CSS -->
+      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+      <!-- Custom styles for this template -->
+      <link href="css/small-business.css" rel="stylesheet">
+
+    </head>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="/">LibManage</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                      <li class="nav-item active">
-                          <%= link_to "Home", "/", class: "nav-link" %>
-                      </li>
-                      <li class="nav-item">
-                          <%= link_to "About", about_path, class: "nav-link" %>
-                      </li>
-                      <li class="nav-item">
-                          <%= link_to "Books", "#", class: "nav-link" %>
-                      </li>
-                  </ul>
-              </div>
-          </nav>
-          <div class="row">
-              <div class="col">
-                  <%= yield %>
-              </div>
-          </div>
+        <a class="navbar-brand" href="#">LibManage</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <%= link_to "Home", root_path , class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign In", new_user_session_path , class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "About", about_path , class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Books", "#" , class: "nav-link" %>
+            </li>
+          </ul>
+        </div>
       </div>
+    </nav>
+
+    <!-- Page Content -->
+      <div class="container">
+        <%= yield %>
+      </div>
+      <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">RandyStinks &copy; Your Website 2019</p>
+    </div>
+  </footer>
+
   </body>
 </html>
